--- a/admin/login.html
+++ b/admin/login.html
@@ -7,7 +7,7 @@
           class="col-4 wow fadeInUp d-flex justify-content-center p-4 border rounded-2 border-secondary d-flex flex-column gap-3"
         >
           <div class="form-logo d-flex justify-content-center">
-            <img src="uploads/logo.png" alt="" width="120" />
+            <img src="uploads/logoo.png" alt="" width="120" />
           </div>
           <div class="row g-3 needs-validation" novalidate>
             <div class="col-md-12">
